header alignment corrected

--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -94,7 +94,7 @@ body{
   }
   .option-row{
     margin-left: 83px !important;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
   .search-icon{
     font-size: 30px !important  ;
